; ModuleID = '/home/carl/AnghaBench/libgit2/tests/core/extr_buffer.c_check_joinbuf_2.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/core/extr_buffer.c_check_joinbuf_2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_BUF_INIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i8*)* @check_joinbuf_2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_joinbuf_2(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8, align 1
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  store i8 47, i8* %7, align 1
  %9 = load i32, i32* @GIT_BUF_INIT, align 4
  store i32 %9, i32* %8, align 4
  %10 = load i8, i8* %7, align 1
  %11 = load i8*, i8** %4, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = call i32 @git_buf_join(i32* %8, i8 signext %10, i8* %11, i8* %12)
  %14 = call i64 @git_buf_oom(i32* %8)
  %15 = icmp eq i64 %14, 0
  %16 = zext i1 %15 to i32
  %17 = call i32 @cl_assert(i32 %16)
  %18 = load i8*, i8** %6, align 8
  %19 = call i32 @git_buf_cstr(i32* %8)
  %20 = call i32 @cl_assert_equal_s(i8* %18, i32 %19)
  %21 = call i32 @git_buf_dispose(i32* %8)
  ret void
}

declare dso_local i32 @git_buf_join(i32*, i8 signext, i8*, i8*) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i64 @git_buf_oom(i32*) #1

declare dso_local i32 @cl_assert_equal_s(i8*, i32) #1

declare dso_local i32 @git_buf_cstr(i32*) #1

declare dso_local i32 @git_buf_dispose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
